--- a/AnimatedWheelPage/animation.html
+++ b/AnimatedWheelPage/animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>FYNDNA</title>
-    <link href="style.min.css" rel="stylesheet" />
+    <link href="style.min.css?v=2" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
@@ -310,6 +310,6 @@
 
 
 
-    <script src="wheel.js"></script>
+    <script src="wheel.js?v=2"></script>
 </body>
 </html>
