--- a/AnimatedWheelPage/animation.html
+++ b/AnimatedWheelPage/animation.html
@@ -11,8 +11,9 @@
         <h1 class="page-title">Our Tech Stack</h1>
         <section class="wheel-section">
             <div class="wheel-and-controls">
+                <button type="button" class="control prev" onclick="spinBackward()">Prev</button>
+                <button type="button" class="control next" onclick="spinForward()">Next</button>
                 <svg viewBox="0 0 570 570" width="570" height="570" xmlns="http://www.w3.org/2000/svg" baseProfile="tiny">
-
                     <defs>
                         <linearGradient id="circle_linear_gradient" gradientTransform="rotate(90)">
                             <stop offset="0" style="stop-color: #fff" />
@@ -153,8 +154,8 @@
 
 
 
-                </svg>  <button type="button" class="control prev" onclick="spinBackward()">Prev</button>
-                <button type="button" class="control next" onclick="spinForward()">Next</button>
+                </svg> 
+                
             </div>
 
             <div class="branches-wrapper">
